deploy/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
          name: go-backend-service
            port:
              number: 80
      # - path: /?(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #     name: webview-service
      #       port:
      #         number: 80
